--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,19 +1,19 @@
 <section class="section-contacts">
-    <div class="container-contacts">
+    <div class="container-contacts sgdsgdf">
         <h2 class="visually-hidden">Our contacts</h2>
         <ul class="contacts-main-list">
             <li class="contacts-card">
                 <ul class="contacts-list">
-                    <p class="contacts-category-cafe">cafe</p>
+                    <p class="contacts-category-cafe">CAFE</p>
                     <li class="contacts-item-city">
-                        <p class="contacts-chicago">Chicago</p>
+                        <p class="contacts-city">Chicago</p>
                         <p class="contacts-text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
                     </li>
                     <li class="contacts-schedule">
-                        <p class="contacts-week-monday">Monday - Friday</p>
-                        <p class="contacts-time-monday">06:00 AM - 10:00 PM</p>
-                        <p class="contacts-week-saturday">Saturday - Sunday</p>
-                        <p class="contacts-time-saturday">08:00 AM - 16:00 PM</p>
+                        <p class="contacts-week">Monday - Friday</p>
+                        <p class="contacts-time">06:00 AM - 10:00 PM</p>
+                        <p class="contacts-week">Saturday - Sunday</p>
+                        <p class="contacts-time contacts-border">08:00 AM - 16:00 PM</p>
                     </li>
                     <li class="contacts-item-link">
                         <a class="contacts-link" href="tel:+61(0)383766284" >+61(0) 383 766 284</a>
@@ -23,16 +23,16 @@
             </li>
             <li class="contacts-card">
                 <ul class="contacts-list">
-                    <p class="contacts-category-food">food truck</p>
+                    <p class="contacts-category-food">FOOD TRUCK</p>
                     <li class="contacts-item-city">
-                        <p class="contacts-los-angeles">Los Angeles</p>
+                        <p class="contacts-city">Los Angeles</p>
                         <p class="contacts-text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
                     </li>
                     <li class="contacts-schedule">
-                        <p class="contacts-week-monday">Monday - Friday</p>
-                        <p class="contacts-time-monday">06:00 AM - 10:00 PM</p>
-                        <p class="contacts-week-saturday">Saturday - Sunday</p>
-                        <p class="contacts-time-saturday">08:00 AM - 16:00 PM</p>
+                        <p class="contacts-week">Monday - Friday</p>
+                        <p class="contacts-time">06:00 AM - 10:00 PM</p>
+                        <p class="contacts-week">Saturday - Sunday</p>
+                        <p class="contacts-time contacts-border">08:00 AM - 16:00 PM</p>
                     </li>
                     <li class="contacts-item-link">
                         <a class="contacts-link" href="tel:+61(0)383766284" >+61(0) 383 766 284</a>
@@ -42,16 +42,16 @@
             </li>
             <li class="contacts-card">
                 <ul class="contacts-list">
-                    <p class="contacts-category-cafe">cafe</p>
+                    <p class="contacts-category-cafe">CAFE</p>
                     <li class="contacts-item-city">
-                        <p class="contacts-new-york">New York</p>
+                        <p class="contacts-city">New York</p>
                         <p class="contacts-text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
                     </li>
                     <li class="contacts-schedule">
-                        <p class="contacts-week-monday">Monday - Friday</p>
-                        <p class="contacts-time-monday">06:00 AM - 10:00 PM</p>
-                        <p class="contacts-week-saturday">Saturday - Sunday</p>
-                        <p class="contacts-time-saturday">08:00 AM - 16:00 PM</p>
+                        <p class="contacts-week">Monday - Friday</p>
+                        <p class="contacts-time">06:00 AM - 10:00 PM</p>
+                        <p class="contacts-week">Saturday - Sunday</p>
+                        <p class="contacts-time contacts-border">08:00 AM - 16:00 PM</p>
                     </li>
                     <li class="contacts-item-link">
                         <a class="contacts-link" href="tel:+61(0)383766284" >+61(0) 383 766 284</a>
@@ -61,8 +61,16 @@
             </li>
         </ul> 
         <div class="contacts-button-container">
-            <button type="button" class="contacts-button-locations">Our Locations</button>
-            <button type="button" class="contacts-button-franchise">Franchise</button>
+            <button type="button" class="contacts-button-locations">Our Locations
+               <svg class="contacts-white-icon">
+                    <use href="./images/sprite.svg#icon-arrow-white-btn"></use>
+                </svg>
+            </button>
+            <button type="button" class="contacts-button-franchise">Franchise
+                <svg class="contacts-red-icon">
+                    <use href="./images/sprite.svg#icon-arrow-btn"></use>
+                </svg>
+            </button>
         </div>  
     </div> 
     
