--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -1,23 +1,35 @@
 .gallery {
-  height: 122px;
-  position: relative;
-  
+  display: flex;
+  justify-content: center;
+  // height: 122px;
+  // position: relative;
+
   background-image: linear-gradient(
     to bottom,
-   $section-background-color 54%,
-    $body-background-color 54%,);
-  
+    $section-background-color 40%,
+    $body-background-color 40%,
+    $body-background-color 100%
+  );
 }
 
 .gallery-container {
-  position: absolute;
-  top: 0;
- width: 100%;
- height: 122px;
-// background-image: url('../images/gallery/mobile/ice-cream-mob.jpg');
-//   background-size: contain;
-//   background-repeat: no-repeat;
-//   background-position: center;
+  @media screen and (max-width: 767px) {
+    width: 480px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 1280px;
+  }
+  // position: absolute;
+  // top: 0;
+  //  width: 100%;
+  // height: 122px;
+  // background-image: url('../images/gallery/mobile/ice-cream-mob.jpg');
+  //   background-size: contain;
+  //   background-repeat: no-repeat;
+  //   background-position: center;
 }
 
 // .gallery-img {
@@ -33,23 +45,24 @@
 //   }
 // }
 
-@media screen and (min-width: 768px) {
-  .gallery-container,
-  .gallery {
-    height: 264px;
-  }
+// @media screen and (min-width: 768px) {
+//   .gallery-container,
+//   .gallery {
+//     height: 264px;
+//   }
 
-  .gallery {
-    background-image: linear-gradient(
-      to bottom,
-    $section-background-color 36%,
-      $body-background-color 36%,);
-  }
+//   .gallery {
+//     background-image: linear-gradient(
+//       to bottom,
+//       $section-background-color 36%,
+//       $body-background-color 36%
+//     );
+//   }
 
-  // .gallery-container {
-  //   background-image: url('../images/gallery/tablet/ice-cream-tabl.jpg');
-  // }
-}
+//   // .gallery-container {
+//   //   background-image: url('../images/gallery/tablet/ice-cream-tabl.jpg');
+//   // }
+// }
 
 // @media screen and (min-devicel-ratio: 2),
 //   screen and (min-resolution: 192dpi) and (min-width: 768px),
@@ -59,23 +72,24 @@
 //   }
 // }
 
-@media screen and (min-width: 1200px) {
-  .gallery-container,
-  .gallery {
-    height: 430px;
-  }
+// @media screen and (min-width: 1200px) {
+//   .gallery-container,
+//   .gallery {
+//     // height: 430px;
+//   }
 
-  .gallery {
-    background-image: linear-gradient(
-      to bottom,
-    $section-background-color 33%,
-      $body-background-color 33%,);
-  }
+//   .gallery {
+//     background-image: linear-gradient(
+//       to bottom,
+//       $section-background-color 33%,
+//       $body-background-color 33%
+//     );
+//   }
 
-  // .gallery-container {
-  //   background-image: url('../images/gallery/desktop/ice-cream-desk.jpg');
-  // }
-}
+//   // .gallery-container {
+//   //   background-image: url('../images/gallery/desktop/ice-cream-desk.jpg');
+//   // }
+// }
 
 // @media screen and (min-devicel-ratio: 2),
 //   screen and (min-resolution: 192dpi) and (min-width: 1200px),
