--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -51,6 +51,7 @@
   .burger-btn {
     width: 40px;
     height: 24px;
+
     background-color: teal;
     border: none;
     padding: 0px;
@@ -59,18 +60,25 @@
   .burger-btn-icon {
     width: 40px;
     height: 24px;
+
     fill: #d41443;
   }
 }
 
 @media screen and (min-with: 768px) {
-  .mdl-btn {
+  .mdl-btn-text {
     display: inline-block;
     text-align: center;
+    font-family: inherit;
 
     font-weight: 700;
     font-size: 16px;
     line-height: 1.312;
-    color: #d41443;
+    color: var(--accent-color);
+  }
+
+  .mdl-btn-icon {
+    width: 6px;
+    height: 10px;
   }
 }
