need rework advantages

--- a/src/sass/layout/_advanteges.scss
+++ b/src/sass/layout/_advanteges.scss
@@ -17,11 +17,11 @@
      background-position: center 90%;
 }
 
-.advanteges,
-.title {
-    padding-top: 16px;
-    text-align: left;
-}
+// .advanteges,
+// .title {
+//     padding-top: 16px;
+//     text-align: left;
+// }
 .advanteges_title {
 position: absolute;
 width: 98px;
@@ -57,12 +57,12 @@ text-transform: uppercase;
         margin-right: 60px;
         }
     }
-    .advanteges,
-    .title {
-        padding-top: 36px;
-        padding-bottom: 13px;
-        text-align: left;
-    }
+    // .advanteges,
+    // .title {
+    //     padding-top: 36px;
+    //     padding-bottom: 13px;
+    //     text-align: left;
+    // }
     .advanteges_title {
         position: absolute;
         width: 98px;
@@ -100,12 +100,12 @@ text-transform: uppercase;
         margin-right: 30px;
         }
     }
-    .advanteges,
-    .title {
-        padding-top: 40px;
-        padding-bottom: 15px;
-        text-align: left;
-    }
+    // .advanteges,
+    // .title {
+    //     padding-top: 40px;
+    //     padding-bottom: 15px;
+    //     text-align: left;
+    // }
     .advanteges_title {
         position: absolute;
         width: 98px;
