--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -31,11 +31,9 @@
       </svg>
     </button>
 
-    <button class="mdl-btn" type="button">
-      <span class="mdl-btn-text">Buy now</span>
-      <svg class="mdl-btn-icon">
-        <use href="#"></use>
-      </svg>
+    <button class="modal-btn" type="button">
+      <span class="modal-btn-text">Buy now</span>
+
     </button>
 
     <!-- MOBILE MENU -->
