--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -38,7 +38,7 @@
 }
 
 @media screen and (max-width: 767px) {
-  .mdl-btn {
+  .modal-btn {
     display: none;
   }
 }
@@ -52,7 +52,7 @@
     width: 40px;
     height: 24px;
 
-    background-color: teal;
+    background-color: transparent;
     border: none;
     padding: 0px;
   }
@@ -66,7 +66,7 @@
 }
 
 @media screen and (min-with: 768px) {
-  .mdl-btn-text {
+  .modal-btn {
     display: inline-block;
     text-align: center;
     font-family: inherit;
