поменял цвет и текст

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -21,8 +21,9 @@
               </svg>
               <div class="dropdown-content">
                 <p class="dropdown-description">
-                  В каждую упаковку мы добавляем горсть грецких орехов. Как
-                  много их будет зависит от того, кто делал мороженное.
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et. dolore magna aliqua
+                  facilisis.
                 </p>
               </div>
             </button>
@@ -48,8 +49,9 @@
               </svg>
               <div class="dropdown-content">
                 <p class="dropdown-description">
-                  В каждую упаковку мы добавляем горсть грецких орехов. Как
-                  много их будет зависит от того, кто делал мороженное.
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et. dolore magna aliqua
+                  facilisis.
                 </p>
               </div>
             </button>
@@ -77,8 +79,9 @@
               </svg>
               <div class="dropdown-content">
                 <p class="dropdown-description">
-                  В каждую упаковку мы добавляем горсть грецких орехов. Как
-                  много их будет зависит от того, кто делал мороженное.
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et. dolore magna aliqua
+                  facilisis.
                 </p>
               </div>
             </button>
