--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -237,7 +237,7 @@
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: chocolate;
+    background-color: rgb(219, 236, 220);
     min-width: 100%;
     height: 50%;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
