--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -21,8 +21,10 @@
               </svg>
               <div class="dropdown-content">
                 <p class="dropdown-description">
-                  В каждую упаковку мы добавляем горсть грецких орехов. Как
-                  много их будет зависит от того, кто делал мороженное.
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Dicta, saepe dignissimos voluptatem autem, vel, atque magni
+                  inventore quia non sapiente fuga cupiditate architecto maxime
+                  nobis esse voluptas recusandae! Voluptatibus, maiores?
                 </p>
               </div>
             </button>
@@ -48,8 +50,10 @@
               </svg>
               <div class="dropdown-content">
                 <p class="dropdown-description">
-                  В каждую упаковку мы добавляем горсть грецких орехов. Как
-                  много их будет зависит от того, кто делал мороженное.
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Cupiditate unde porro facere repellat voluptatibus provident
+                  ipsam iure, explicabo placeat, error repellendus quisquam ut,
+                  commodi veniam? Earum amet quod officia cupiditate.
                 </p>
               </div>
             </button>
@@ -77,8 +81,10 @@
               </svg>
               <div class="dropdown-content">
                 <p class="dropdown-description">
-                  В каждую упаковку мы добавляем горсть грецких орехов. Как
-                  много их будет зависит от того, кто делал мороженное.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint
+                  quod ad ducimus voluptatum, reiciendis repellendus repudiandae
+                  quas aliquam nisi iste aspernatur inventore! Illum alias nobis
+                  consequatur repellat deleniti sunt sequi.
                 </p>
               </div>
             </button>
