--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -59,7 +59,7 @@
     letter-spacing: 0.04em;
     color: $text-white-color;
     margin-bottom: 30px;
-	  margin-top: 30px;
+    margin-top: 30px;
   }
 
   &-item {
@@ -130,11 +130,11 @@
 }
 
 .product-pink {
-	background-color: $bg-hero-color ;
-	border-radius: 24px;
+  background-color: $bg-hero-color;
+  border-radius: 24px;
   padding-top: 161px;
-	margin-bottom: 130px;
-	margin-left: 10px;
+  margin-bottom: 130px;
+  margin-left: 10px;
   margin-right: 10px;
   position: relative;
 
@@ -161,13 +161,16 @@
   .product-pink {
     margin: 0 10px;
   }
+
   .product-coffee {
     margin: 0 10px;
   }
+
   .product-green {
     margin: 0 10px;
   }
 }
+
 @media screen and (min-width: 768px) {
   .product-pink::before {
     width: 220px;
@@ -231,36 +234,42 @@
   height: 6px;
   fill: $text-white-color;
 }
+
 .dropdown {
-    display: inline-block;
-}
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: chocolate;
-    min-width: 100%;
-    height: 50%;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-    bottom: 100%;
-    left: 0;
-    top: 50%;
-    border-radius: 24px;
-}
-.dropdown-description {
-    color: $text-white-color;
-    text-decoration: none;
-    display: block;
-    font-family: DM Sans;
-font-style: normal;
-font-weight: 700;
-font-size: 14px;
-line-height: 1.15;
-letter-spacing: 0.04em;
-padding: 50px 30px;
+  display: inline-block;
 }
 
-.dropdown:hover .dropdown-content {display: block;}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: rgb(250, 182, 133);
+  min-width: 100%;
+  height: 50%;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  bottom: 100%;
+  left: 0;
+  top: 50%;
+  border-radius: 24px;
+}
+
+.dropdown-description {
+  color: $text-white-color;
+  text-decoration: none;
+  display: block;
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.15;
+  letter-spacing: 0.04em;
+  padding: 50px 30px;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
 @media screen and (min-width: 1280px) {
   .products-title-title {
     font-size: 30px;
