fix gradient in reviews text

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -26,10 +26,11 @@
                     ./images/reviews/reviewer-1@2x.png 2x
                 "
             >
-            <p class="review-text">
-                <span class="rewiew-text-element">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
-                </span>
-            </p>
+            <div class="review-text-wrapper">
+                <p class="review-text">
+                    Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+                 </p>
+            </div>
             <p class="reviewers-name">Emily, Los Angeles</p>
         </div> 
         <div class="reviews-slide">
@@ -43,10 +44,11 @@
                     ./images/reviews/reviewer-2@2x.png 2x
                 "
             >
-            <p class="review-text">
-                <span class="rewiew-text-element">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
-                </span>
-            </p>
+            <div class="review-text-wrapper">
+                <p class="review-text">
+                    Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+                 </p>
+            </div>
             <p class="reviewers-name">Jane, Chicago</p>
         </div>
         <div class="reviews-slide">
@@ -60,10 +62,11 @@
                     ./images/reviews/reviewer-3@2x.png 2x
                 "
             >
-            <p class="review-text">
-                <span class="rewiew-text-element">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
-                </span>
-            </p>
+            <div class="review-text-wrapper">
+                <p class="review-text">
+                    Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+                 </p>
+            </div>
             <p class="reviewers-name">Kate, New York</p>
         </div>
     </div>  
