--- a/src/partials/hero_header.html
+++ b/src/partials/hero_header.html
@@ -1,195 +1,198 @@
-<header class="header">
-    <div class="container-box">
+<section class="header-hero">
+    <header class="header">
+        <div class="container-box">
 
 
 
-        <section class="hero-section">
+            <div class="hero-section">
 
 
-            <div class="logo-case">
+                <div class="logo-case">
 
-                <a class="logotype link" lang="en" href="/">
-                    <svg width="50" height="50" class="Logo-icon">
-                        <use href="./images/sprite.svg#logo"></use>
-                    </svg>
+                    <a class="logotype link" lang="en" href="/">
+                        <svg width="50" height="50" class="Logo-icon">
+                            <use href="./images/sprite.svg#logo"></use>
+                        </svg>
 
-                    <span class="logo-icecream">icecream</span>
-                </a>
+                        <span class="logo-icecream">icecream</span>
+                    </a>
 
-                <div class="nav-block">    
-                    <nav class="navigation-case">
-                        <ul class="navigation-list list">
-                            <li class="navigation-list-item"><a class="nav accent link" href="">Home</a></li>
-                            <li class="navigation-list-item"><a class="nav link" href="">About us</a></li>
-                            <li class="navigation-list-item"><a class="nav link" href="">How it’s made?</a></li>
-                            <li class="navigation-list-item"><a class="nav link" href="">Our products</a></li>
-                            <li class="navigation-list-item"><a class="nav link" href="">Contact</a></li>
-                        </ul>
-                    </nav>
-                </div>
+                    <div class="nav-block">    
+                        <nav class="navigation-case">
+                            <ul class="navigation-list list">
+                                <li class="navigation-list-item"><a class="nav accent link" href="">Home</a></li>
+                                <li class="navigation-list-item"><a class="nav link" href="">About us</a></li>
+                                <li class="navigation-list-item"><a class="nav link" href="">How it’s made?</a></li>
+                                <li class="navigation-list-item"><a class="nav link" href="">Our products</a></li>
+                                <li class="navigation-list-item"><a class="nav link" href="">Contact</a></li>
+                            </ul>
+                        </nav>
+                    </div>
 
 
-                <div class="btn-case">
+                    <div class="btn-case">
+                        
+                        <div class="burger-case">
+                            <button type="button" class="burger-btn" data-menu-button>
+                                <svg class="burger-icon" width="20" height="20">
+                                    <use href="./images/sprite.svg#burgermenu"></use>
+                                </svg>
+                            </button>                    
+                        </div>
+
                     
-                    <div class="burger-case">
-                        <button type="button" class="burger-btn" data-menu-button>
-                            <svg class="burger-icon" width="20" height="20">
-                                <use href="./images/sprite.svg#burgermenu"></use>
-                            </svg>
-                        </button>                    
+                        <button class="Buy-now-button" type="button">Buy now</button>
                     </div>
 
                 
-                    <button class="Buy-now-button" type="button">Buy now</button>
                 </div>
+                
 
-               
+            </div>
+
+        </div>
+
+        <div class="box-content">
+            <div class="left-case"> 
+                <div class="slogan-case">
+            
+                    <div class="slogan-title">
+                        <h1 class="hero-title">ice cream<br> made with</h1>
+                        <p class="slogan-prefix">passion</p>
+                
+                        <ul class="header-but-list list">
+                            <li class="header-but-item"><a class="header-but-link link" href="">Products</a></li>
+                            <li class="header-but-item"><a class="header-but-link link" href="">How it’s made?</a></li>
+                        </ul>
+                    </div>
+            
+                    <div class="notitia-block">
+                
+                        <picture class="notitia-img">
+                
+                            <source srcset="./images/hero-header/desktop-milk.webp 1x, ./images/hero-header/desktop-milk@2x.webp 2x"
+                                media="(min-width: 1280px)" type="image/webp">
+                            <source srcset="./images/hero-header/tablet-milk.webp 1x, ./images/hero-header/tablet-milk@2x.webp 2x"
+                                media="(min-width: 768px)" type="image/webp">
+                
+                            <source srcset="./images/hero-header/desktop-milk.png 1x, ./images/hero-header/desktop-milk@2x.png 2x"
+                                media="(min-width: 1280px)">
+                            <source srcset="./images/hero-header/tablet-milk.png 1x, ./images/hero-header/tablet-milk@2x.png 2x"
+                                media="(min-width: 768px)">
+                
+                            <img src="./images/hero-header/tablet-milk.png" alt="графин с молоком">
+                
+                        </picture>
+                
+                        <div class="title-case">
+                
+                            <p class="title-notitia">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt ut labore et</p>
+                
+                            <a class="title-but-link link" href="">
+                                <svg class="title-button-icon" width="18" height="18">
+                                    <use href="./images/sprite.svg#right"></use>
+                                </svg>
+                            </a>
+                
+                        </div>
+                
+                
+                    </div>
+            
+            </div>
+        </div>
+
+        <div class="center-case">
+
+
+            <div class="hero-content"></div>
+            
+            <div class="hero-case">
+                <picture>
+                    <source srcset="
+                                ./images/hero-header/desktop-ice-cream.webp    1x,
+                                ./images/hero-header/desktop-ice-cream@2x.webp 2x
+                                " media="(min-width: 1280px)" type="image/webp" />
+                    <source srcset="
+                                ./images/hero-header/desktop-ice-cream.png    1x,
+                                ./images/hero-header/desktop-ice-cream@2x.png 2x
+                                " media="(min-width: 1280px)" />
+                    <source srcset="
+                                ./images/hero-header/tablet-ice-cream.webp    1x,
+                                ./images/hero-header/tablet-ice-cream@2x.webp 2x
+                                " media="(min-width: 768px)" type="image/webp" />
+                    <source srcset="
+                                ./images/hero-header/tablet-ice-cream.png    1x,
+                                ./images/hero-header/tablet-ice-cream@2x.png 2x
+                                " media="(min-width: 768px)" />
+                    <source srcset="
+                                ./images/hero-header/mobile-ice-cream.webp    1x,
+                                ./images/hero-header/mobile-ice-cream@2x.webp 2x
+                                " media="(min-width: 280px)" type="image/webp" />
+                    <source srcset="
+                                ./images/hero-header/mobile-ice-cream.png    1x,
+                                ./images/hero-header/mobile-ice-cream@2x.png 2x
+                                " media="(min-width: 280px)" />
+                    <img src="./images/hero-header/mobile-ice-cream.png" alt="рожковое мороженое" />
+                </picture>
+            
             </div>
             
+            
+        </div>
 
-        </section>
-
-    </div>
-
-<div class="box-content">
-    <div class="left"> 
-        <div class="slogan-case">
-        
-            <div class="slogan-title">
-                <h1 class="hero-title">ice cream<br> made with</h1>
-                <p class="slogan-prefix">passion</p>
-        
-                <ul class="header-but-list list">
-                    <li class="header-but-item"><a class="header-but-link link" href="">Products</a></li>
-                    <li class="header-but-item"><a class="header-but-link link" href="">How it’s made?</a></li>
-                </ul>
-            </div>
-        
-            <div class="notitia-block">
-        
-                <picture class="notitia-img">
-        
-                    <source srcset="./images/hero-header/desktop-milk.webp 1x, ./images/hero-header/desktop-milk@2x.webp 2x"
-                        media="(min-width: 1280px)" type="image/webp">
-                    <source srcset="./images/hero-header/tablet-milk.webp 1x, ./images/hero-header/tablet-milk@2x.webp 2x"
-                        media="(min-width: 768px)" type="image/webp">
-        
-                    <source srcset="./images/hero-header/desktop-milk.png 1x, ./images/hero-header/desktop-milk@2x.png 2x"
-                        media="(min-width: 1280px)">
-                    <source srcset="./images/hero-header/tablet-milk.png 1x, ./images/hero-header/tablet-milk@2x.png 2x"
-                        media="(min-width: 768px)">
-        
-                    <img src="./images/hero-header/tablet-milk.png" alt="графин с молоком">
-        
-                </picture>
-        
-                <div class="title-case">
-        
-                    <p class="title-notitia">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et</p>
-        
-                    <svg class="title-button-icon" width="18" height="18">
-                        <use href="./images/sprite.svg#right"></use>
-                    </svg>
-        
+        <div class="right-case">
+            <div class="soooooo-tasty">
+            
+            
+                <div class="soooooo-box">
+                    <ul class="auxiliary-list list">
+                        <li class="auxiliary-item">
+                            <p class="figures">16</p>
+                            <p class="signature">cafes</p>
+                        </li>
+                        <li class="auxiliary-item">
+                            <p class="figures">23</p>
+                            <p class="signature">food trucks</p>
+                        </li>
+                    </ul>
                 </div>
-        
-        
+            
+            
+                <div class="soooooo-image">
+                    <picture class="interest-block">
+                
+                        <source srcset="./images/hero-header/desktop-girl.webp 1x, ./images/hero-header/desktop-girl@2x.webp 2x"
+                            media="(min-width: 1280px)" type="image/webp">
+                        <source srcset="./images/hero-header/tablet-girl.webp 1x, ./images/hero-header/tablet-girl@2x.webp 2x"
+                            media="(min-width: 768px)" type="image/webp">
+                
+                        <source srcset="./images/hero-header/desktop-girl.png 1x, ./images/hero-header/desktop-girl@2x.png 2x"
+                            media="(min-width: 1280px)">
+                        <source srcset="./images/hero-header/tablet-girl.png 1x, ./images/hero-header/tablet-girl@2x.png 2x"
+                            media="(min-width: 768px)">
+                
+                        <img src="./images/hero-header/tablet-girl.png" alt="девушка ест мороженое">
+                
+                    </picture>
+                </div>
+            
+            
             </div>
-        
         </div>
     </div>
 
-    <div class="center">
+        
+        
+    </header>
+</section>
 
-
-        <div class="hero-content"></div>
-        
-        <div class="hero-case">
-            <picture>
-                <source srcset="
-                              ./images/hero-header/desktop-ice-cream.webp    1x,
-                              ./images/hero-header/desktop-ice-cream@2x.webp 2x
-                            " media="(min-width: 1280px)" type="image/webp" />
-                <source srcset="
-                              ./images/hero-header/desktop-ice-cream.png    1x,
-                              ./images/hero-header/desktop-ice-cream@2x.png 2x
-                            " media="(min-width: 1280px)" />
-                <source srcset="
-                              ./images/hero-header/tablet-ice-cream.webp    1x,
-                              ./images/hero-header/tablet-ice-cream@2x.webp 2x
-                            " media="(min-width: 768px)" type="image/webp" />
-                <source srcset="
-                              ./images/hero-header/tablet-ice-cream.png    1x,
-                              ./images/hero-header/tablet-ice-cream@2x.png 2x
-                            " media="(min-width: 768px)" />
-                <source srcset="
-                              ./images/hero-header/mobile-ice-cream.webp    1x,
-                              ./images/hero-header/mobile-ice-cream@2x.webp 2x
-                            " media="(min-width: 280px)" type="image/webp" />
-                <source srcset="
-                              ./images/hero-header/mobile-ice-cream.png    1x,
-                              ./images/hero-header/mobile-ice-cream@2x.png 2x
-                            " media="(min-width: 280px)" />
-                <img src="./images/hero-header/mobile-ice-cream.png" alt="рожковое мороженое" />
-            </picture>
-        
-        </div>
-        
-        
-    </div>
-
-    <div class="right">
-        <div class="soooooo-tasty">
-        
-        
-            <div class="soooooo-box">
-                <ul class="auxiliary-list list">
-                    <li class="auxiliary-item">
-                        <p class="figures">16</p>
-                        <p class="signature">cafes</p>
-                    </li>
-                    <li class="auxiliary-item">
-                        <p class="figures">23</p>
-                        <p class="signature">food trucks</p>
-                    </li>
-                </ul>
-            </div>
-        
-        
-            <div class="soooooo-image">
-                <picture class="interest-block">
-            
-                    <source srcset="./images/hero-header/desktop-girl.webp 1x, ./images/hero-header/desktop-girl@2x.webp 2x"
-                        media="(min-width: 1280px)" type="image/webp">
-                    <source srcset="./images/hero-header/tablet-girl.webp 1x, ./images/hero-header/tablet-girl@2x.webp 2x"
-                        media="(min-width: 768px)" type="image/webp">
-            
-                    <source srcset="./images/hero-header/desktop-girl.png 1x, ./images/hero-header/desktop-girl@2x.png 2x"
-                        media="(min-width: 1280px)">
-                    <source srcset="./images/hero-header/tablet-girl.png 1x, ./images/hero-header/tablet-girl@2x.png 2x"
-                        media="(min-width: 768px)">
-            
-                    <img src="./images/hero-header/tablet-girl.png" alt="девушка ест мороженое">
-            
-                </picture>
-            </div>
-        
-        
-        </div>
-    </div>
-</div>
-
-      
-    
-</header>
-
-
-<!-- modal -->
+<!-- mob -->
 
 <div class="background-close bat-close" bat-close bat-ref></div>
 
-    <section class="backdrop is-open" data-menu>
+    <div class="backdrop is-open" data-menu>
         
         
             <div class="modal-block">
@@ -226,6 +229,6 @@
     </div>
 
 
-</section>
+</div>
 
 
