--- a/src/sass/layout/_advanteges.scss
+++ b/src/sass/layout/_advanteges.scss
@@ -17,8 +17,7 @@
      background-position: center 90%;
 }
 
-.advanteges,
-.title {
+.advanteges .title {
     padding-top: 16px;
     text-align: left;
 }
@@ -57,8 +56,7 @@ text-transform: uppercase;
         margin-right: 60px;
         }
     }
-    .advanteges,
-    .title {
+    .advanteges .title {
         padding-top: 36px;
         padding-bottom: 13px;
         text-align: left;
@@ -100,7 +98,7 @@ text-transform: uppercase;
         margin-right: 30px;
         }
     }
-    .advanteges,
+    .advanteges
     .title {
         padding-top: 40px;
         padding-bottom: 15px;
