--- a/src/sass/layout/_advanteges.scss
+++ b/src/sass/layout/_advanteges.scss
@@ -16,6 +16,7 @@
 .advanteges_title {
     width: 98px;
     height: 56px;
+    font-weight: 400;
     font-size: 36px;
     line-height: 1.13;
     letter-spacing: 0.04em;
