test a slick (not install)

--- a/src/sass/layout/_customer-reviews.scss
+++ b/src/sass/layout/_customer-reviews.scss
@@ -65,6 +65,12 @@
     var(--primary-line-color) 30px,
     var(--primary-line-color) 31px
   );
+  // to top,
+  //   var(--primary-line-color),
+  //   var(--primary-line-color) 1px,
+  //   var(--light-shaded-bg-color) 1px,
+  //   var(--light-shaded-bg-color) 31px
+  // );
 
   @include adaptive-for-tablet {
     padding: 3px 44px 5px 20px;
